Customer with controller, service, repo etc. (#3)
Co-authored-by: d.kivilev <d.kivilev@qiwi.com>