@@ -2,7 +2,6 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     id 'idea'
-    id 'checkstyle'
     id 'com.github.spotbugs' version '5.0.14'
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
@@ -48,6 +47,9 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    ktlint
+}
 
 dependencyManagement {
     imports {
@@ -70,6 +72,12 @@ dependencies {
     testImplementation 'com.github.spotbugs:spotbugs-annotations:4.7.3'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:postgresql'
+
+    ktlint("com.pinterest:ktlint:0.49.1") {
+        attributes {
+            attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
+        }
+    }
 }
 
 tasks.withType(KotlinCompile) {
@@ -94,19 +102,33 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
-apply plugin: 'checkstyle'
-checkstyle {
-    toolVersion '10.3.4'
-    configFile file("$project.rootDir/checkstyle.xml")
-    ignoreFailures = false
-    maxWarnings = 0
-    maxErrors = 0
-}
-
 apply plugin: 'com.github.spotbugs'
 spotbugs {
     showProgress = false
     effort = 'max'
     reportLevel = 'low'
     excludeFilter = file("$project.rootDir/spotbugs-exclude.xml")
+}
+
+tasks.register("ktlintCheck", JavaExec) {
+    group = "verification"
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    mainClass = "com.pinterest.ktlint.Main"
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args "src/**/*.kt", "**.kts", "!**/build/**"
+}
+
+tasks.named("check") {
+    dependsOn tasks.named("ktlintCheck")
+}
+
+tasks.register("ktlintFormat", JavaExec) {
+    group = "formatting"
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    mainClass = "com.pinterest.ktlint.Main"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
+    // see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information
+    args "-F", "src/**/*.kt",  "**.kts", "!**/build/**"
 }
